envs/env-ci-1.l/wiring-gateway.yaml
apiVersion: gateway.githedgehog.com/v1alpha1
kind: Gateway
metadata:
  name: gateway-1
  namespace: fab
spec:
  interfaces:
    enp2s1: {}
    enp2s2: {}
  workers: 8
