envs/env-ci-1.l/wiring-multifabric.yaml
apiVersion: gateway.githedgehog.com/v1alpha1
kind: Gateway
metadata:
  name: gateway-1
  namespace: default
spec:
  interfaces:
    enp2s1np0: {}
  workers: 16
  topology:
    fabric: fabric-a
  groups:
  - name: default-a
---
apiVersion: gateway.githedgehog.com/v1alpha1
kind: Gateway
metadata:
  name: gateway-2
  namespace: default
spec:
  interfaces:
    enp2s1np1: {}
  workers: 16
  topology:
    fabric: fabric-b
  groups:
  - name: default
